WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191752
[Pointer Events] event.isPrimary doesn't always represent the oldest active touch
https://bugs.webkit.org/show_bug.cgi?id=191752
Summary
[Pointer Events] event.isPrimary doesn't always represent the oldest active t...
Antoine Quint
Reported
2018-11-16 09:30:40 PST
Our current support of pointer events for touch devices doesn't always represent the oldest active touch.
Attachments
Patch
(12.77 KB, patch)
2018-11-16 09:46 PST
,
Antoine Quint
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-11-16 09:31:54 PST
<
rdar://problem/46129270
>
Antoine Quint
Comment 2
2018-11-16 09:46:51 PST
Created
attachment 355068
[details]
Patch
EWS Watchlist
Comment 3
2018-11-16 09:49:43 PST
Attachment 355068
[details]
did not pass style-queue: ERROR: Source/WebCore/dom/PointerEvent.h:87: The parameter name "isCancelable" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dean Jackson
Comment 4
2018-11-16 09:52:41 PST
Comment on
attachment 355068
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=355068&action=review
> LayoutTests/pointerevents/ios/pointer-events-is-primary.html:18 > +function dumpEvent(event) > +{ > + console.log(`[${event.pointerId} ${event.type}] x = ${event.clientX}, y = ${event.clientY}, isPrimary = ${event.isPrimary}`); > +}
This function is never used.
Antoine Quint
Comment 5
2018-11-17 01:30:02 PST
Committed
r238344
: <
https://trac.webkit.org/changeset/238344
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug